# vzaccaria.github.io

./: .agignore  .eslintrc.json  .gitignore  .ignore  CNAME  README.md  _config.yaml  address.html  blog.html  casa.html  index.html  makefile  neutrino-preset-mine.js  override.js  package-lock.json  package.json  package.json.old  projects.html  research.html  sitemap.xml  teaching.html  videos.html  webpack.config.js
_drafts/: 2016-01-02-questa-prova.md  2016-01-08-codifica-binaria-ed-altri-esercizi-in-c.md  2016-01-12-codifica-in-virgola-fissa-e-mobile.md  2016-01-26-esercizi-di-ricapitolazione.md  2016-02-07-risultati-prove-in-itinere.md  2016-02-16-soluzioni-seconda-prova-in-itinere.md  2016-02-29-soluzioni-appello-del-18-febbraio.md  2016-07-01-soluzioni-appello-del-27-giugno.md  2016-09-05-tutorial-polimi@home.md
_layouts/: default.html
_posts/: 2013-09-10-user-journey-map-of-a-university-class.md  2014-02-24-towards-template-programming-with-haskell.md  2014-03-12-implementing-a-simple-dsp-filter-library-with-template-haskell.md  2014-03-21-symbolically-optimize-dsp-filters-with-template-haskell.md  2015-10-21-using-a-cheap-stm32-to-teach-remote-sensor-monitoring.md  2016-01-08-codifica-binaria-ed-altri-esercizi-in-c.md  2016-01-12-codifica-in-virgola-fissa-e-mobile.md  2016-01-15-esercizi-su-algebra-booleana.md  2016-01-19-esercizi-su-logica-booleana-e-architetture-dei-calcolatori.md  2016-01-22-sistemi-operativi-ed-esercizi-su-caches.md  2016-02-07-risultati-prove-in-itinere.md  (+9 more)
data/: site.json  (+10 more)
deposit/slides/Hyp1920/dac/: makefile  pyproject.toml  soa.py
(+237 files in other folders)
