[tool.poetry]
name = "dac"
version = "0.1.0"
description = ""
authors = ["Vittorio Zaccaria <vittorio.zaccaria@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
diagrams = "^0.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
